--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.9.0
   internet_connection_checker_plus: ^2.5.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
